--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -24,6 +24,12 @@
 
   <%- include('partials/navbar') %>
 
+  <% if (!user) { %>
+    <script>console.error("❌ user is not defined in navbar partial")</script>
+  <% } %>
+  
+
+
   <section class="relative w-full h-[calc(100vh-64px)] overflow-hidden">
     <!-- Background Video -->
     <video 
