--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -33,4 +33,4 @@
         }
     </style>
 </head>
-<body class="flex h-screen"> 
+<body class="flex h-screen">  -->
