--- a/views/admin/partials/pagination.ejs
+++ b/views/admin/partials/pagination.ejs
@@ -1,4 +1,4 @@
-<!-- Example for pagination.ejs -->
+<!-- Example for pagination.ejs
 <div class="flex justify-center mt-6 space-x-2">
     <% if (currentPage > 1) { %>
       <a href="?page=<%= currentPage - 1 %><%= searchQuery ? '&search=' + encodeURIComponent(searchQuery) : '' %>" class="px-3 py-1 border rounded bg-white hover:bg-gray-100 text-gray-700">Previous</a>
@@ -11,4 +11,4 @@
     <% if (currentPage < totalPages) { %>
       <a href="?page=<%= currentPage + 1 %><%= searchQuery ? '&search=' + encodeURIComponent(searchQuery) : '' %>" class="px-3 py-1 border rounded bg-white hover:bg-gray-100 text-gray-700">Next</a>
     <% } %>
-  </div>
+  </div> -->
